--- a/app/src/main/res/layout/subactivity.xml
+++ b/app/src/main/res/layout/subactivity.xml
@@ -14,21 +14,20 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#FFFFFF">
 
     <LinearLayout
         android:id="@+id/contentsLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
-
     </LinearLayout>
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="207dp"
-        android:layout_height="199dp"
+        android:layout_width="218dp"
+        android:layout_height="206dp"
         android:onClick="loadImage"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
@@ -37,7 +36,7 @@
         android:layout_width="334dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="장소이름"
+        android:hint="장소 이름"
         android:inputType="textPersonName" />
 
     <EditText
@@ -46,6 +45,7 @@
         android:layout_height="418dp"
         android:ems="10"
         android:gravity="start|top"
+        android:hint="장소 설명"
         android:inputType="textMultiLine" />
 
     <Button
@@ -53,7 +53,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="getC"
-        android:text="글 저장" />
+        android:text="글 저장"
+        android:background="@drawable/btnp"/>
 
 
 </LinearLayout>
